<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searchLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="50sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:id="@+id/searchTextView"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchEditText"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/hint" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/find"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:textSize="20sp"
        android:id="@+id/searchButton"/>

</LinearLayout>